# azure-iot-c-back-compat

./: .gitignore  .gitmodules  CMakeLists.txt
configs/: back_compat_functions.1.cmake  back_compat_functions.cmake
devdocs/: iothub_mqtt_back_compat.md
tests/: CMakeLists.txt
tests/common_test_files/: back_compat_test_common.c  back_compat_test_common.h  back_compat_test_const.h  iothub_back_compat_test_common.c  iothub_back_compat_test_common.h  prov_back_compat_test_common.c  prov_back_compat_test_common.h  prov_custom_hsm.c  prov_custom_hsm.h
tests/iothub_amqp_back_compat/: CMakeLists.txt  iothub_amqp_back_compat.c  main.c
tests/iothub_http_back_compat/: CMakeLists.txt  iothub_http_back_compat.c  main.c
tests/iothub_mqtt_back_compat/: CMakeLists.txt  iothub_mqtt_back_compat.c  main.c
tests/prov_mqtt_back_compat/: CMakeLists.txt  main.c  prov_mqtt_back_compat.c
testtools/iothub_test/: CMakeLists.txt
testtools/iothub_test/inc/: iothub_account.h
testtools/iothub_test/src/: iothub_account.c
