#Copyright (c) Microsoft. All rights reserved.
#Licensed under the MIT license. See LICENSE file in the project root for full license information.

add_subdirectory(iothub_mqtt_back_compat)
add_subdirectory(iothub_amqp_back_compat)
add_subdirectory(iothub_http_back_compat)

#add_subdirectory(prov_mqtt_back_compat)
